--- a/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
@@ -1,6 +1,6 @@
 
   <div class="mt-5 md:mt-0 md:col-span-2 bg-white ">
-    <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Propriété</div>
+    <div class="text-black text-3xl font-extrabold mt-20 mb-10">Propriété</div>
     <form [formGroup]="propertyForm">
       <div class="grid grid-cols-6 gap-6">
         <div class="col-span-6 sm:col-span-6">
@@ -108,19 +108,19 @@
               </div>
     
            </div>
-           <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
-            <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
+           <div class="flex justify-between mt-12">
+          
                 <a  (click)="returnToAnother()" class="inline-flex items-center px-3 py-2   text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
                   <img src="../../../../../../assets/images/precedent.svg" />
                 </a>
               
-              </div>
-               <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
+       
+           
                 
-                <button type="button" (click)="goToActivity()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+                <button type="button" (click)="goToActivity()" class="inline-flex  items-center px-8 py-2 border border-transparent text-sm leading-4 font-xl rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
                     Suivant
                   </button>
-              </div>
+  
           </div>
            </form>
            </div>
