--- a/src/app/modules/register/bailleur-register/pages/steps/about/about.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="mt-5 md:mt-0 md:col-span-2 bg-white ">
-  <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">A propos de vous</div>
+  <div class="text-black text-3xl font-extrabold mt-20 mb-10">A propos de vous</div>
   <form [formGroup]="aboutForm">
     <div class="grid grid-cols-6 gap-6">
       <!--    <div class="col-span-6 sm:col-span-6">
@@ -157,13 +157,13 @@
       </div>
     </div>
     <div>
-      <div class="space-y-8 divide-y divide-gray-200">
-        <div class=" py-3 text-right sm:px-6">
+      <div class="flex mt-10 justify-end">
+       
           <button type="button" (click)="goToActivity()" [disabled]="!aboutForm.valid"
-            class="inline-flex  items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+            class="inline-flex  items-center px-8 py-2 border border-transparent text-sm leading-4 font-xl rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
             Suivant
           </button>
-        </div>
+     
       </div>
     </div>
   </form>
