--- a/src/app/modules/register/bailleur-register/pages/steps/address/address.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/address/address.component.html
@@ -1,15 +1,15 @@
 
   <div class="mt-5 md:mt-0 md:col-span-2 bg-white ">
-    <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Lieu et adresse</div>
+    <div class="text-black text-3xl font-extrabold mt-20 mb-10 ">Lieu et adresse</div>
     <form [formGroup]="addressForm">
       <div class="grid grid-cols-6 gap-6">
     
           <div class="col-span-6 sm:col-span-3">
             <label for="nationality" class="block text-sm font-medium text-gray-700">Nationalité</label>
             <select id="nationality" name="nationality" formControlName="nationality" autocomplete="nationality" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-              <option>Française</option>
-              <option>Amercaine</option>
-              <option>Marocaine</option>
+              <option>Suisse</option>
+              <option>Etranger</option>
+       
             </select>
           </div>
         <div class="col-span-6 sm:col-span-3">
@@ -18,14 +18,16 @@
           <span class="text-red-600"
           *ngIf="(placeOfOrigin?.dirty || placeOfOrigin?.touched) && placeOfOrigin?.invalid && placeOfOrigin?.errors?.required"
         >
-        Lieu d'origine Obligatoire.
+        Lieu d'origine obligatoire.
         </span>
          </div>
         <div class="col-span-6 sm:col-span-6">
-          <label for="typeOfPermit" class="block text-sm font-medium text-gray-700">Permis</label>
+          <label for="typeOfPermit" class="block text-sm font-medium text-gray-700">Votre permis de séjours</label>
           <select id="typeOfPermit" name="typeOfPermit" formControlName="typeOfPermit" autocomplete="typeOfPermit" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-            <option>Permis C</option>
+            <option>Permis A</option>
             <option>Permis B</option>
+            <option>Permis C</option>
+
           </select>
         </div>
         <div class="col-span-6 sm:col-span-  ">
@@ -50,11 +52,11 @@
             <span class="text-red-600"
             *ngIf="(inSwitzerlandSince?.dirty || inSwitzerlandSince?.touched) && inSwitzerlandSince?.invalid && inSwitzerlandSince?.errors?.required"
           >
-          Date Obligatoire.
+          Date obligatoire.
           </span>
           </div>
           <div class="col-span-6 sm:col-span-3">
-            <label for="familyOrPrimaryAccommodation" class="block text-sm font-medium text-gray-700">Logement familial/principal?</label>
+            <label for="familyOrPrimaryAccommodation" class="block text-sm font-medium text-gray-700">Logement familial / principal?</label>
             <select id="familyOrPrimaryAccommodation" name="familyOrPrimaryAccommodation" formControlName="familyOrPrimaryAccommodation" autocomplete="familyOrPrimaryAccommodation" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
               <option>Oui</option>
               <option>Non</option>
@@ -67,7 +69,7 @@
           <span class="text-red-600"
           *ngIf="(numberOfPeopleOccupyingTheFutureAccommodation?.dirty || numberOfPeopleOccupyingTheFutureAccommodation?.touched) && numberOfPeopleOccupyingTheFutureAccommodation?.invalid && numberOfPeopleOccupyingTheFutureAccommodation?.errors?.required"
         >
-         Champ Obligatoire.
+         Champ obligatoire.
         </span>
         </div>
         <div class="col-span-6 sm:col-span-3">
@@ -76,7 +78,7 @@
           <span class="text-red-600"
           *ngIf="(numberOfAdults?.dirty || numberOfAdults?.touched) && numberOfAdults?.invalid && numberOfAdults?.errors?.required"
         >
-        Nombre d'adultes Obligatoire.
+        Nombre d'adultes obligatoire.
         </span>
         </div>
         <div class="col-span-6 sm:col-span-3">
@@ -85,7 +87,7 @@
           <span class="text-red-600"
           *ngIf="(numberOfChildren?.dirty || numberOfChildren?.touched) && numberOfChildren?.invalid && numberOfChildren?.errors?.required"
         >
-        Nombre d'enfants Obligatoire.
+        Nombre d'enfants obligatoire.
         </span>
          </div>
         <div class="col-span-6 sm:col-span-6">
@@ -118,19 +120,19 @@
     
            </div>
            </div>
-           <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
-            <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
+           <div class="flex justify-between mt-12">
+          
                 <a (click)="returnToAbout()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
                   <img src="../../../../../../assets/images/precedent.svg" />
                 </a>
               
-              </div>
-               <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
+           
+              
                 
-                <button type="button"  [disabled]="!addressForm.valid" (click)="goToAnother()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+                <button type="button"  [disabled]="!addressForm.valid" (click)="goToAnother()" class="inline-flex  items-center px-8 py-2 border border-transparent text-sm leading-4 font-xl rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
                     Suivant
                   </button>
-              </div>
+             
           </div>
            </form>
            </div>
