dashboard sidenav implementation

--- a/src/app/modules/dashboard/locataire/locataire.component.html
+++ b/src/app/modules/dashboard/locataire/locataire.component.html
@@ -1,1 +1,11 @@
 <navbar></navbar>
+<div class="bg-blue1 w-full " style="height: 88vh;">
+    <div class="max-w-7xl pt-10 mx-auto px-2 sm:px-6 lg:px-8 grid grid-cols-12 gap-4">
+        <div class="col-span-3 border-red-500	border-black	">
+            <sidenav></sidenav>
+        </div>
+        <div class="col-span-9 border-red-500	border-black	">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Accusantium ipsum quam eius laborum hic, similique itaque, corporis amet earum temporibus maxime quasi ullam
+            aliquid. Quibusdam deserunt amet quia veritatis velit.</div>
+    </div>
+</div>
