--- a/src/assets/scss/layouts/__layouts-dir.scss
+++ b/src/assets/scss/layouts/__layouts-dir.scss
@@ -8,6 +8,7 @@ Files inside this folder can contain specific element styles and layout.
 @import "footer";
 @import "login";
 @import "home";
+@import "sidenav";
 //Additonal Layouts Stylesheets
 /*
 This file is used to contain all component imports.
