--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
-<nav class="bg-white shadow py-3 w-screen">
+<nav class="bg-white shadow py-3 w-full">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8 	">
         <div class="flex justify-center md:justify-between  h-16">
             <div class="hidden md:flex">
