--- a/src/app/modules/dashboard/locataire/mygoods/mygoods.component.html
+++ b/src/app/modules/dashboard/locataire/mygoods/mygoods.component.html
@@ -3,7 +3,7 @@
         <h1 class="popping font-bold  text-2xl ">Mes biens immobiliers</h1>
         <button
             class="text-white px-6 py-2 rounded-md font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-between">Publier
-            un nouveau bien</button>
+            un bien</button>
     </div>
     <div class="pt-5 px-5">
         <div class=" grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-2">
