dashboard bailleur integration

--- a/src/app/modules/dashboard/bailleur/mygoods/mygoods.component.html
+++ b/src/app/modules/dashboard/bailleur/mygoods/mygoods.component.html
@@ -1,8 +1,8 @@
 <div class="space-y-1 bg-white shadow-xl py-3  rounded-2xl" aria-label="Sidebar">
     <div class="flex flex-row justify-between items-center border-b-2 pb-5 px-5 pt-5">
-        <h1 class="popping font-bold  text-2xl ">Mes biens immobiliers</h1>
+        <h1 class="popping font-bold  text-xl md:text-2xl ">Mes biens immobiliers</h1>
         <button
-            class="text-white px-6 py-2 rounded-md font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-between">Publier
+            class="text-white px-6 py-2 rounded-md font-700 text-xs md:text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-between">Publier
             un nouveau bien</button>
     </div>
     <div class="pt-5 px-5">
