--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -17,7 +17,7 @@ $container-max-widths: (
 );
 $blue_light:#F3F9FD;
 $light_red:#F07777;
-
+$blue_1:#CDDDE7;
 $blue_2:#6FB4E1;
 $blue_3:#2e94fa; 
 $blue_4:#194CA7;
@@ -29,6 +29,12 @@ $gray_1:#F5F5F5;
 $gray_2:#808080;
 $gray_3:#99A4AE;
 $gray_4:#F7F8FA;
+$green_1:rgba(229, 251, 238, 0.75);
+$green_2:#46A970;
+$green_3:#7EC69D;
+$transparent:rgba(255, 255, 255, .4);
+$orange_1:#E7A262;
+
 
 
 
