--- a/src/app/modules/shared/goodcard/goodcard.component.html
+++ b/src/app/modules/shared/goodcard/goodcard.component.html
@@ -18,7 +18,7 @@
                         class="	 white pointer-events-none absolute h-4 w-9 mx-auto rounded-full transition-colors ease-in-out duration-200"></span>
                     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
                     <span aria-hidden="true"
-                        class="scale-125 translate-x-5 bg-green-400	 pointer-events-none absolute left-0 inline-block h-5 w-5 border border-gray-200 rounded-full bg-white shadow transform ring-0 transition-transform ease-in-out duration-200"></span>
+                        class="scale-125 translate-x-0 bg-green-400	 pointer-events-none absolute left-0 inline-block h-5 w-5 border border-gray-200 rounded-full bg-white shadow transform ring-0 transition-transform ease-in-out duration-200"></span>
                 </button>
             </div>
         </div>
@@ -48,15 +48,15 @@
                 </div>
                 <div class="flex flex-column justify-between mt-5">
                     <button
-                        class="shadow text-gray-900 mr-1 px-6 w-1/2 text-center py-2 rounded-md font-700 text-base bg-white btnhover font-semibold ">12
+                        class="shadow truncate text-gray-900 mr-1 px-6 w-1/2 text-center py-2 rounded-md font-700 text-base bg-white btnhover font-semibold ">12
                         Visites</button>
                     <button
-                        class="shadow text-gray-900 ml-1 px-6 w-1/2 text-center py-2 rounded-md font-700 text-base bg-white btnhover font-semibold ">3
+                        class="shadow truncate text-gray-900 ml-1 px-6 w-1/2 text-center py-2 rounded-md font-700 text-base bg-white btnhover font-semibold ">3
                         Condidats</button>
                 </div>
                 <div class="mt-3">
                     <button
-                        class="shadow w-full text-blue-2 ml-1 px-6  text-center py-2 rounded-md font-700 text-base bg-white btnhover font-semibold ">Booster
+                        class="shadow truncate w-full text-blue-2 ml-1 px-6  text-center py-2 rounded-md font-700 text-base bg-white btnhover font-semibold ">Booster
                         la publication</button>
                 </div>
             </div>
