--- a/src/app/modules/shared/responsivenav/responsivenav.component.html
+++ b/src/app/modules/shared/responsivenav/responsivenav.component.html
@@ -1,11 +1,12 @@
 <nav class="fixed bottom-0 left-0 right-0 w-full z-50  bg-white   rounded-md shadow-lg block md:hidden"
     aria-label="Navbar">
-    <div class="flex flex-row justify-between">
+    <div class="flex flex-row justify-around">
         <!-- Current: " z-10 bg-indigo-50 border-indigo-500 text-indigo-600",
         Default: "bg-white border-gray-300 text-gray-500 hover:bg-gray-50" -->
-        <a aria-current="page"
+        <a [routerLink]="['/dashboard/bailleur/applications']"
+            [routerLinkActive]="['border-t-4', 'border-blue-400','text-indigo-600']"
             class="bg-white border-gray-300 border-indigo-500 text-indigo-600  relative inline-flex items-center px-4 py-4  text-sm font-medium">
-            <svg class="text-gray-400  flex-shrink-0 active:text-indigo-600 -ml-1 mr-3 h-6 w-6"
+            <svg [routerLinkActive]="['text-blue-700']" class="text-gray-400  active:text-indigo-600  h-6 w-6"
                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                 aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -21,11 +22,12 @@
                     d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
         </a>
-        <a
+        <a [routerLink]="['/dashboard/bailleur/mygoods']"
+            [routerLinkActive]="['border-t-4', 'border-blue-400','text-indigo-600']"
             class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50  md:inline-flex relative items-center px-4 py-4  text-sm font-medium">
-            <svg class="text-gray-400 flex-shrink-0 active:text-indigo-600 -ml-1 mr-3 h-6 w-6"
-                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                aria-hidden="true">
+            <svg class="text-gray-400 flex-shrink-0 active:text-indigo-600 h-6 w-6"
+                [routerLinkActive]="['text-blue-700']" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
             </svg>
