add good implementation

--- a/src/app/modules/dashboard/bailleur/components/application-details-responsive/application-details-responsive.component.html
+++ b/src/app/modules/dashboard/bailleur/components/application-details-responsive/application-details-responsive.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white my-3 py-3 px-3 rounded-lg">
+<div class="bg-white my-3 py-3 px-3 rounded-lg mt-5">
     <div class="space-y-4">
         <div class="aspect-w-4 aspect-h-2 relative">
             <img class="object-cover shadow-lg rounded-lg" src="../../../../assets/images/bien1.png" alt="">
