--- a/src/app/modules/shared/goodcard/goodcard.component.html
+++ b/src/app/modules/shared/goodcard/goodcard.component.html
@@ -7,7 +7,7 @@
                     class="inline-flex items-center  px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
                     Appartement
                 </span>
-                <button type="button"
+                <button type="button" (click)="switchInput()"
                     class=" flex-shrink-0 group relative rounded-full inline-flex items-center justify-center h-5 w-10 cursor-pointer focus:outline-none  focus:ring-offset-2 focus:ring-indigo-500"
                     role="switch" aria-checked="false">
                     <span class="sr-only">Use setting</span>
@@ -17,7 +17,7 @@
                     <span aria-hidden="true"
                         class="	 white pointer-events-none absolute h-4 w-9 mx-auto rounded-full transition-colors ease-in-out duration-200"></span>
                     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                    <span aria-hidden="true"
+                    <span aria-hidden="true" [@switch]="switch ? true : false"
                         class="scale-125 translate-x-0 bg-green-400	 pointer-events-none absolute left-0 inline-block h-5 w-5 border border-gray-200 rounded-full bg-white shadow transform ring-0 transition-transform ease-in-out duration-200"></span>
                 </button>
             </div>
@@ -25,13 +25,13 @@
 
         <div class="px-3">
             <div class=" leading-6 popping font-semibold space-y-2">
-                <h3 class="text-lg">Magnifique appartement type F5 :</h3>
+                <h3 class="text-lg truncate">Magnifique appartement type F5 :</h3>
                 <p class="text-base popping font-semibold	">CHF 1400.- / mois</p>
                 <div class="flex flex-row items-center">
                     <img src="../../../../assets/images/location-good.png" class="h-4 mr-2" alt="">
                     <span class="text-blue-2">Genève</span>
                 </div>
-                <div class="flex flex-row items-center justify-between">
+                <div class="flex flex-row items-center justify-between flex-wrap  ">
                     <div class="flex flex-row items-center">
                         <img src="../../../../assets/images/good-superificie.png" class="mx-2" alt="">
                         <span class="truncate">1000 m2</span>
