--- a/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/details/details.component.html
@@ -1,4 +1,159 @@
 <div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl ">
+    <div class="py-3 border-b-2">
+        <h1 class="popping text-xl font-bold ">Détails</h1>
+    </div>
 
-    <span>Implementation of details page</span>
+    <div class="px-3 mt-5">
+
+
+
+        <div class="px-3 mt-5">
+            <div class="flex flex-col md:flex-row  justify-between mt-2">
+                <div class="w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Nombre de pièces </h1>
+                    <div class="relative">
+                        <input type="number" name="email" id="email"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+                        <span class="absolute top-2 text-lg	 right-2 text-gray-500">pcs</span>
+                    </div>
+                </div>
+
+                <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Nombre chambre à coucher </h1>
+                    <div class="relative">
+                        <input type="number" name="email" id="email"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
+    <div class="px-3 mt-5">
+
+
+
+        <div class="px-3 mt-5">
+            <div class="flex flex-col md:flex-row  justify-between mt-2">
+                <div class="w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Nombre de WC </h1>
+                    <div class="relative">
+                        <input type="number" name="email" id="email"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+                    </div>
+                </div>
+
+                <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Nombre de salles de bains</h1>
+                    <div class="relative">
+                        <input type="number" name="email" id="email"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
+    <div class="px-3 mt-5">
+
+        <div class="px-3 mt-5">
+            <div class="flex flex-col md:flex-row  justify-between mt-2">
+                <div class="w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Nombre d’étages dans l’immeuble </h1>
+                    <div class="relative">
+                        <input type="number" name="etage" id="etage"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+
+                    </div>
+                </div>
+
+                <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Etage de l’appartement </h1>
+                    <div class="relative">
+                        <input type="number" name="aptEtage" id="aptEtage"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
+
+    <div class="px-3 mt-5">
+
+        <div class="px-3 mt-5">
+            <div class="flex flex-col md:flex-row  justify-between mt-2">
+                <div class="w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Année de construction </h1>
+                    <div class="relative">
+                        <input type="number" name="contruction" id="contruction"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="1990" aria-describedby="construction">
+
+                    </div>
+                </div>
+
+                <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Année de rénovation </h1>
+                    <div class="relative">
+                        <input type="number" name="renovation" id="renovation"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="2015" aria-describedby="email-description">
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
+    <div class="px-3 mt-5">
+
+        <div class="px-3 mt-5">
+            <div class="flex flex-col md:flex-row  justify-between mt-2">
+                <div class="w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Type de chauffage </h1>
+                 
+                    <div class="relative">
+                        <button type="button" 
+                        class="flex items-center  justify-between w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none"
+                        id="menu-button" aria-expanded="true" aria-haspopup="true">
+                        <span class=" text-lg">Bois</span>
+                        <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 9L0.0717961 0.750001L13.9282 0.749998L7 9Z" fill="#6FB4E1" />
+                        </svg>
+                    </button>
+                    </div>
+                </div>
+
+                <div class="ml-0 md:ml-2 mt-3 md:mt-0 w-full">
+                    <h1 class="popping text-base font-semibold mb-3">Environnement</h1>
+                    <div class="relative">
+                        <input type="number" name="Environnement" id="Environnement"
+                            class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
+                            placeholder="0" aria-describedby="email-description">
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
 </div>
